--- a/AKASEC CTF/calculus/solved.ipynb
+++ b/AKASEC CTF/calculus/solved.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,6 @@
      "text": [
       "AKASEC{d1d_y0u_3nj0y_c41cu1u5_101?}\n",
       "AKASEC{d1d_y0u_3nj0y_c41cu1u5_101?}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exiting Sage (CPU time 0m1.08s, Wall time 0m5.04s).\n"
      ]
     },
     {
@@ -97,17 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 14], [14, 0], [2, 12], [12, 2], [2, 14], [14, 2], [4, 10], [10, 4], [4, 14], [14, 4], [6, 8], [8, 6], [6, 10], [10, 6], [6, 12], [12, 6], [6, 14], [14, 6], [8, 6], [6, 8], [8, 14], [14, 8], [10, 4], [4, 10], [10, 6], [6, 10], [10, 12], [12, 10], [10, 14], [14, 10], [12, 2], [2, 12], [12, 6], [6, 12], [12, 10], [10, 12], [12, 14], [14, 12], [14, 0], [0, 14], [14, 2], [2, 14], [14, 4], [4, 14], [14, 6], [6, 14], [14, 8], [8, 14], [14, 10], [10, 14], [14, 12], [12, 14], [14, 14], [14, 14]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Crypto.Cipher import AES\n",
     "from Crypto.Util.Padding import unpad\n",
@@ -123,13 +108,57 @@
     "    assert (x[0] | x[1]) == 14\n",
     "print(array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sage.all import *\n",
+    "import hashlib\n",
+    "import sympy as sp\n",
+    "from Crypto.Cipher import AES\n",
+    "\n",
+    "key = 60\n",
+    "encrypted = bytes.fromhex(\"805534c14e694348a67da0d75165623cf603c2a98405b34fe3ba8752ce24f5040c39873ec2150a61591b233490449b8b7bedaf83aa9d4b57d6469cd3f78fdf55\")\n",
+    "iv = encrypted[:16]\n",
+    "ct = encrypted[16:]\n",
+    "\n",
+    "for v0 in range(2**4):\n",
+    "    for v1 in range(2**4):\n",
+    "        if v0 | v1 != 14:\n",
+    "            continue\n",
+    "\n",
+    "        # Set up and solve the differential equation\n",
+    "        x = var('x')\n",
+    "        y = function('y')(x)\n",
+    "        yp = diff(y, x)\n",
+    "        ypp = diff(yp, x)\n",
+    "        f = desolve(2*ypp - 6*yp + 3*y == 0, y, ics=[0,v0,v1], ivar=x)\n",
+    "\n",
+    "        fp = derivative(f, x)\n",
+    "        assert int(fp(x=0)) == v1 and int(f(x=0)) == v0\n",
+    "        \n",
+    "        # Test for flag\n",
+    "        point = f(x=key)\n",
+    "        # point = str(point).replace('^', '**') \n",
+    "        # # The challenge is flawed here, to get the flag we need sympy to derive the wrong/incorrect answer as it mistakes sage's exponentiation for xor.\n",
+    "\n",
+    "        val = sp.N(point, 100)\n",
+    "        point_hash = hashlib.sha256(str(val).encode()).digest()[:16]\n",
+    "        cipher = AES.new(key=point_hash, iv=iv, mode=AES.MODE_CBC)\n",
+    "        msg = cipher.decrypt(ct)\n",
+    "        if b'AKA' in msg:\n",
+    "            print(msg) # b'AKASEC{d1d_y0u_3nj0y_c41cu1u5_101?}\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r'"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.5",
-   "language": "sage",
-   "name": "sagemath"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
