--- a/CryptoCTF2024/nazdone/solved.ipynb
+++ b/CryptoCTF2024/nazdone/solved.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "19 (x^106 + x^81 + x^77 + x^59 + x^47 + x^42 + x^22 + x^11 + x^7 + 2) * (x^107 + x^88 + x^51 + x^43 + x^37 + x^36 + x^35 + x^18 + x^14 + 2) * (x^108 + x^93 + x^74 + x^64 + x^31 + 2)\n",
-      "True\n",
       "(10, 10, 6)\n",
       "Inverse does not exist.\n",
       "Inverse does not exist.\n",
-      "Argument 'self' has incorrect type (expected sage.rings.finite_rings.integer_mod.IntegerMod_gmp, got int)\n",
+      "unsupported operand parent(s) for -: 'Ring of integers modulo 67086525836865982094673880600810256005961617151283317566078153226175705789594094624822652838168627925461219084263915001883644637391279141' and 'Ring of integers modulo 3530869780887683268140728773245395170410635845517928489976021534009516369358447511411853596093628646212566313257712207746790503704123439'\n",
       "Inverse does not exist.\n",
-      "Argument 'self' has incorrect type (expected sage.rings.finite_rings.integer_mod.IntegerMod_gmp, got int)\n",
+      "unsupported operand parent(s) for -: 'Ring of integers modulo 67086525836865982094673880600810256005961617151283317566078153226175705789594094624822652838168627925461219084263915001883644637391279141' and 'Ring of integers modulo 3530869780887683268140728773245395170410635845517928489976021534009516369358447511411853596093628646212566313257712207746790503704123439'\n",
       "Inverse does not exist.\n",
       "Inverse does not exist.\n",
       "Inverse does not exist.\n",
@@ -49,7 +52,7 @@
     "\n",
     "t1, t2, t3 = [x[0] for x in factor(P(rebase(n, 19)))]\n",
     "p, q, r = t1(m), t2(m), t3(m)\n",
-    "print(p * q * r == n)\n",
+    "assert(p * q * r == n)\n",
     "print((len(t1.coefficients()), len(t2.coefficients()), len(t3.coefficients())))\n",
     "\n",
     "for z in range(10, 20):\n",
@@ -73,9 +76,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "SageMath 9.5",
+   "language": "sage",
+   "name": "sagemath"
   },
   "language_info": {
    "codemirror_mode": {
@@ -84,7 +87,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
